# Mo-Shen

./: .gitignore  PRODUCT_ROADMAP.md  README.md  README_EN.md  RELEASE_NOTES.md  pyproject.toml  微信小程序开发指南.md
.workbuddy/memory/: 2026-06-03.md
miniprogram/: app.js  app.json  app.wxss  project.config.json
miniprogram/pages/history/: history.js  history.json  history.wxml  history.wxss
miniprogram/pages/home/: home.js  home.json  home.wxml  home.wxss
miniprogram/pages/index/: index.js  index.json  index.wxml  index.wxss
miniprogram/pages/manuscript/: manuscript.js  manuscript.json  manuscript.wxml  manuscript.wxss
miniprogram/pages/studio/: studio.js  studio.json  studio.wxml  studio.wxss
storyagents/: __init__.py  cli.py  default_config.py  schemas.py  server.py
storyagents/agents/: __init__.py
storyagents/agents/characters/: __init__.py  character_designer.py
storyagents/agents/editing/: editor.py
storyagents/agents/management/: __init__.py  showrunner.py
storyagents/agents/outlining/: __init__.py  outline_agent.py
storyagents/agents/planning/: __init__.py  planner.py
storyagents/agents/review/: __init__.py  reviewer.py
storyagents/agents/utils/: __init__.py  prompt_utils.py  story_states.py  structured_utils.py
storyagents/agents/worldbuilding/: __init__.py  worldbuilder.py
storyagents/graph/: __init__.py  conditional_logic.py  propagation.py  setup.py  story_graph.py
storyagents/h5/: README.md  app.js  index.html  styles.css
storyagents/llm_clients/: openai_client.py
tests/: test_storyagents_flow.py  test_storyagents_server.py
(+2 files in other folders)
